<resources>
    <string name="app_name">Shopper</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login_button">Already a member? Login</string>
    <string name="save_button">Save</string>
    <string name="modify_password">Change Password</string>
    <string name="shopping_list">Shopping List</string>
    <string name="history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="created_by">Created by</string>
    <string name="action_share">Share</string>
    <string name="recipe">Recipes</string>
    <string name="default_notification_channel_id">com.example.shopper-Shopper</string>
    <string name="notifications">Notifications</string>
    <string name="action_shop">Start Shopping</string>
    <string name="action_search">Search</string>
</resources>
